fix gittery transition on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,7 @@ img {
 
 .profile-image {
 	position: absolute;
+	left: 0;
 	transition: all 800ms ease;
 	opacity: 0;
 }
